--- a/services/userservice/src/main/resources/application.yml
+++ b/services/userservice/src/main/resources/application.yml
@@ -12,6 +12,10 @@ spring:
       ddl-auto: update
     database-platform: org.hibernate.dialect.PostgreSQLDialect
 
+eureka:
+  client:
+    service-url:
+      defaultZone: http://localhost:8761/eureka/
 
-
-
+server:
+  port: 8081
